@@ -1,4 +1,0 @@
-$NetBSD: distinfo,v 1.2 2003/09/09 13:26:28 recht Exp $
-
-SHA1 (pyslsk-1.2.4.tar.gz) = f3ff038ff5e6b86211b52482de919a92cd1cb3f3
-Size (pyslsk-1.2.4.tar.gz) = 97663 bytes
